# lightftpserver-svn

./: readme.txt
ftp_server/: .tm_project.cache  FtpServer.prj  FtpServer.prj.bak  FtpServer.pws  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.in  libtool  readme.txt
ftp_server/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
ftp_server/include/: Makefile  Makefile.am  Makefile.in  commonheaders.h  utils.h
ftp_server/src/: Makefile  Makefile.am  Makefile.in  ftpserver.cpp  utils.cpp
ftp_server/src/.deps/: ftpserver.Po  utils.Po
ftp_server/trunk/: AUTHORS  Doxyfile  configure.in  ftpserver.kdevelop
ftp_server/trunk/src/: Makefile.am  ftpserver.cpp
ftp_server/trunk/templates/: cpp
trunk/: AUTHORS  Doxyfile  Makefile.am  configure.in  ftp_server.kdevelop
trunk/docs/: FTP.odp  ftpdoc.tar.bz2  impl.odp
trunk/src/: Makefile.am  Makefile.in  callback.cpp  callback.h  client.cpp  client.cpp~  client.h  commonheaders.h  configUtils.cpp  configUtils.h  csocket.cpp  csocket.h  ftp.cpp  ftp.h  ftp_handlers.cpp  ftp_handlers.h  ftp_server.cpp  logClient.cpp  logClient.h  messages.cpp  messages.h  utils.cpp  utils.h
trunk/src/logServer/: Makefile.am  Makefile.in  commonheaders.h  logClient.cpp  logClient.cpp~  logClient.h  logServer.cpp  logServer.h  logServer.h~  logger.cpp  utils.cpp  utils.h
trunk/src/old_handlers/: ftp.cpp  ftp.h  ftp_handlers.cpp  ftp_handlers.h  ftp_server.cpp
trunk/templates/: cpp  h
