## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

ftpserver_includedir = $(pkgincludedir)

ftpserver_include_DATA = \
	commonheaders.h\
	utils.h

EXTRA_DIST = $(ftpserver_include_DATA)
